--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
     <style>
-      div {
-        border: 1px solid black;
-      }
       a {
         color: red;
-      }
-      div a {
-        color: green;
       }
       #exec-bio {
         background-color: lightgray;
       }
+      .bio-box {
+        border: 1px solid black;
+      }
+      
+      .bio-box a {
+        color: green;
+      }
+      
     </style>
   </head>
   <body>
