--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
       /* GLOBAL STYLES */
       a {
-        color: red;
+        color: plum;
       }
       div.bio-box {
         border: 1px solid green;
@@ -18,7 +18,7 @@
 
       /* SOCIAL STYLES */
       .social-link {
-        color: blue;
+        color: rgb(0 0 255 / 0.8);
       }
       /* BIO STYLES */
       .bio-box {
@@ -33,13 +33,13 @@
     <h1 class="social-link">I'm an h1</h1>
     <ul>
       <li>
-        <a href="https://example.com/">Link</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
       <li>
-        <a href="https://example.com/">Link</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
       <li>
-        <a href="https://example.com/">Link</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
