--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: default
       </header>
       <div
         class="posts-image"
-        style="background-image:url({{ site.posts.first.postHero }})"
+        style="background-image:url('{{ site.posts.first.postHero }}')"
       ></div>
       {{ site.posts.first.excerpt }}
     </div>
