--- a/grid.html
+++ b/grid.html
@@ -70,10 +70,12 @@
         z-index: 2;
       }
       .grid-banner {
-        align-self: start;
+        /* align-self: start; */
         background-color: rgba(168, 214, 247, 0.9);
-        grid-column: content-start / panel-end;
-        grid-row-start: content-start;
+        /* grid-column: content-start / panel-end; */
+        grid-column: menu-start / panel-end;
+        /* grid-row-start: content-start; */
+        grid-row: content-start / footer-end;
         padding: 1em;
         position: sticky;
         top: 0;
